--- a/.doc_gen/metadata/services.yaml
+++ b/.doc_gen/metadata/services.yaml
@@ -301,14 +301,14 @@ bedrock:
   tags:
     product_categories: {'Machine Learning &amp; AI'}
   version: bedrock-2023-04-20
-bedrock-agents:
+bedrock-agent:
   bundle: bedrock
   long: '&BRAlong;'
   short: '&BRA;'
-  sort: Agents for Amazon Bedrock
+  sort: Agent for Amazon Bedrock
   expanded:
-    long: Agents for Amazon Bedrock
-    short: Bedrock Agents
+    long: Agent for Amazon Bedrock
+    short: Bedrock Agent
   blurb: offers you the ability to build and configure autonomous agents in your application.
   guide:
     subtitle: User Guide
@@ -317,14 +317,14 @@ bedrock-agents:
   tags:
     product_categories: {'Machine Learning &amp; AI'}
   version: bedrock-agents-2023-12-07
-bedrock-agents-runtime:
+bedrock-agent-runtime:
   bundle: bedrock
   long: '&BRARUNlong;'
   short: '&BRARUN;'
-  sort: Agents for Amazon Bedrock Runtime
+  sort: Agent for Amazon Bedrock Runtime
   expanded:
-    long: Agents for Amazon Bedrock Runtime
-    short: Bedrock Agents Runtime
+    long: Agent for Amazon Bedrock Runtime
+    short: Bedrock Agent Runtime
   blurb: offers you the ability to build and configure autonomous agents in your application.
   guide:
     subtitle: User Guide
