--- a/.doc_gen/metadata/bedrock-agent_metadata.yaml
+++ b/.doc_gen/metadata/bedrock-agent_metadata.yaml
@@ -126,3 +126,38 @@ bedrock-agent_PrepareAgent:
                 - python.example_code.bedrock-agent.PrepareAgent
   services:
     bedrock-agent: {PrepareAgent}
+bedrock-agent_GettingStartedWithBedrockAgents:
+  title: An end-to-end example showing how to create and invoke &BR; agents using an &AWS; SDK
+  title_abbrev: Create and invoke &BR; agents
+  synopsis_list:
+    - Create an execution role for the agent.
+    - Create the agent and deploy a DRAFT version.
+    - Create a Lambda function that implements the agent's capabilities.
+    - Create an action group that connects the agent to the Lambda function.
+    - Deploy the fully configured agent.
+    - Invoke the agent with user-provided prompts.
+    - Delete all created resources.
+  category: Scenarios
+  languages:
+    Python:
+      versions:
+        - sdk_version: 3
+          github: python/example_code/bedrock-agent
+          excerpts:
+            - description:
+              snippet_files:
+                - python.example_code.bedrock-agent.Scenario_GettingStartedBedrockAgents
+  services:
+    bedrock-agent:
+      {
+        CreateAgent,
+        CreateAgentActionGroup,
+        CreateAgentAlias,
+        DeleteAgent,
+        DeleteAgentAlias,
+        GetAgent,
+        ListAgents,
+        PrepareAgent,
+      }
+    bedrock-agent-runtime:
+      {InvokeAgent}
