Fix link to scenario

--- a/.doc_gen/metadata/bedrock-agent-runtime_metadata.yaml
+++ b/.doc_gen/metadata/bedrock-agent-runtime_metadata.yaml
@@ -33,7 +33,7 @@ bedrock-agent-runtime_GettingStartedWithBedrockAgents:
           github: python/example_code/bedrock-agent
           excerpts:
             - description:
-              snippet_files:
+              snippet_tags:
                 - python.example_code.bedrock-agent.Scenario_GettingStartedBedrockAgents
   services:
     bedrock-agent:
