--- a/.doc_gen/metadata/bedrock-agent_metadata.yaml
+++ b/.doc_gen/metadata/bedrock-agent_metadata.yaml
@@ -145,7 +145,7 @@ bedrock-agent_GettingStartedWithBedrockAgents:
           github: python/example_code/bedrock-agent
           excerpts:
             - description:
-              snippet_files:
+              snippet_tags:
                 - python.example_code.bedrock-agent.Scenario_GettingStartedBedrockAgents
   services:
     bedrock-agent:
