--- a/javav2/example_code/bedrock/pom.xml
+++ b/javav2/example_code/bedrock/pom.xml
@@ -3,8 +3,8 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>BedrockJ2Project</groupId>
-    <artifactId>BedrockJ2Project</artifactId>
+    <groupId>org.example</groupId>
+    <artifactId>Bedrock</artifactId>
     <version>1.0-SNAPSHOT</version>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
