--- a/.doc_gen/metadata/mediastore_metadata.yaml
+++ b/.doc_gen/metadata/mediastore_metadata.yaml
@@ -1,7 +1,7 @@
 mediaconvert_CreateContainer:
   title: Create a &EMSlong; container using an &AWS; SDK
   title_abbrev: Create a container
-  synopsis: create an &EMSlong; transcoding job.
+  synopsis: create an &EMSlong; container.
   category:
   languages:
     Java:
@@ -12,4 +12,5 @@ mediaconvert_CreateContainer:
             - description:
               snippet_tags:
                 - mediastore.java2.create_container.main
+  services:  
     mediastore: {CreateContainer}
