--- a/javascriptv3/example_code/cloudwatch-logs/package.json
+++ b/javascriptv3/example_code/cloudwatch-logs/package.json
@@ -8,11 +8,11 @@
     "@aws-sdk-examples/libs": "^1.0.0",
     "@aws-sdk/client-cloudwatch-logs": "^3.215.0",
     "@aws-sdk/client-iam": "^3.216.0",
-    "@aws-sdk/client-lambda": "^3.216.0",
-    "libs": "*"
+    "@aws-sdk/client-lambda": "^3.216.0"
   },
   "scripts": {
-    "integration-test": "vitest run **/*.integration.test.js"
+    "integration-test": "vitest run **/*.integration.test.js",
+    "test": "vitest run **/*.unit.test.js"
   },
   "devDependencies": {
     "vitest": "^0.25.3"
