--- a/.doc_gen/metadata/sdks.yaml
+++ b/.doc_gen/metadata/sdks.yaml
@@ -207,8 +207,8 @@ CLI:
   syntax: none
   sdk:
     2:
-      long: "&CLIlong;"
-      short: "&CLI;"
+      long: "&CLI2long;"
+      short: "&CLI2;"
       expanded:
         long: "AWS Command Line Interface"
         short: "AWS CLI"
