--- a/.doc_gen/metadata/s3_metadata.yaml
+++ b/.doc_gen/metadata/s3_metadata.yaml
@@ -2321,14 +2321,14 @@ s3_Scenario_PresignedUrl:
           github: javav2/example_code/s3
           sdkguide:
           excerpts:
-            - description: <emphasis role="bold">Generate a pre-signed URL for an object, then download it (GET request).</emphasis>
+            - description: Generate a pre-signed URL for an object, then download it (GET request).
             - description: Imports
               snippet_tags:
                 - presigned.java2.generatepresignedgeturlandretrieve.import
-            - description: <emphasis role="bold">Generate the URL</emphasis>.
+            - description: Generate the URL.
               snippet_tags:
                 - presigned.java2.generatepresignedgeturlandretrieve.createpresignedurl
-            - description: <emphasis role="bold">Download the object</emphasis> by using any one of the following three approaches.
+            - description: Download the object by using any one of the following three approaches.
             - description: Use JDK <code>HttpURLConnection</code> (since v1.1) class to do the download.
               snippet_tags:
                 - presigned.java2.generatepresignedgeturlandretrieve.basichttpclient
@@ -2339,14 +2339,14 @@ s3_Scenario_PresignedUrl:
               snippet_tags:
                 - presigned.java2.generatepresignedgeturlandretrieve.sdkhttpclient
 
-            - description: <emphasis role="bold">Generate a pre-signed URL for an upload, then upload a file (PUT request).</emphasis>
+            - description: Generate a pre-signed URL for an upload, then upload a file (PUT request).
             - description: Imports
               snippet_tags:
                 - presigned.java2.generatepresignedurlandputfilewithmetadata.import
-            - description: <emphasis role="bold">Generate the URL</emphasis>.
+            - description: Generate the URL.
               snippet_tags:
                 - presigned.java2.generatepresignedurlandputfilewithmetadata.createpresignedurl
-            - description: <emphasis role="bold">Upload a file object</emphasis> by using any one of the following three approaches.
+            - description: Upload a file object by using any one of the following three approaches.
             - description: Use the JDK <code>HttpURLConnection</code> (since v1.1) class to do the upload.
               snippet_tags:
                 - presigned.java2.generatepresignedurlandputfilewithmetadata.basichttpclient
