--- a/resources/cdk/aurora_serverless_app/package.json
+++ b/resources/cdk/aurora_serverless_app/package.json
@@ -25,8 +25,9 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
+    "aws-cdk": "^2.115.0",
+    "aws-cdk-lib": "^2.80.0",
     "constructs": "^10.0.38",
-    "source-map-support": "^0.5.21",
-    "aws-cdk-lib": "^2.80.0"
+    "source-map-support": "^0.5.21"
   }
 }
