--- a/rustv1/examples/localstack/Cargo.toml
+++ b/rustv1/examples/localstack/Cargo.toml
@@ -6,9 +6,9 @@ authors = ["Doug Schwartz <dougsch@amazon.com>"]
 edition = "2021"
 
 [dependencies]
-aws-config = { features = ["behavior-version-latest"], version = "1.0.1"}
-aws-sdk-s3 = "1.2.0"
-aws-sdk-sqs = "1.2.0"
+aws-config = { version = "1.0.1", features = ["behavior-version-latest"] }
+aws-sdk-s3 = { version = "1.4.0" }
+aws-sdk-sqs = { version = "1.3.0" }
 tokio = { version = "1.20.1", features = ["full"] }
 http = "0.2"
 tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
