--- a/rustv1/examples/qldb/Cargo.toml
+++ b/rustv1/examples/qldb/Cargo.toml
@@ -10,9 +10,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-aws-config = { features = ["behavior-version-latest"], version = "1.0.1"}
-aws-sdk-qldb = "1.2.0"
-aws-sdk-qldbsession = "1.2.0"
+aws-config = { version = "1.0.1", features = ["behavior-version-latest"] }
+aws-sdk-qldb = { version = "1.3.0" }
+aws-sdk-qldbsession = { version = "1.3.0" }
 tokio = { version = "1.20.1", features = ["full"] }
 tokio-stream = { version = "0.1.9", features = ["default"] }
 clap = { version = "~4.4", features = ["derive"] }
