--- a/rustv1/cross_service/detect_labels/Cargo.toml
+++ b/rustv1/cross_service/detect_labels/Cargo.toml
@@ -10,12 +10,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-aws-config = "1.0.1"
-aws-sdk-dynamodb = "1.2.0"
-aws-sdk-rekognition = "1.2.0"
-aws-sdk-s3 = "1.2.0"
-aws-smithy-types = { features = ["rt-tokio"],  version = "1.0.1"}
-aws-types = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
+aws-config = { version = "1.0.1" }
+aws-sdk-dynamodb = { version = "1.3.0" }
+aws-sdk-rekognition = { version = "1.3.0" }
+aws-sdk-s3 = { version = "1.4.0" }
+aws-smithy-types = { version = "1.0.1", features = ["rt-tokio"] }
+aws-types = { version = "1.0.1" }
 tokio = { version = "1.20.1", features = ["full"] }
 clap = { version = "~4.4", features = ["derive"] }
 tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
