--- a/rustv1/cross_service/photo_asset_management/Cargo.toml
+++ b/rustv1/cross_service/photo_asset_management/Cargo.toml
@@ -14,13 +14,13 @@ _HANDLER = "labels"
 
 [dependencies]
 anyhow = "1.0.70"
-aws-config = "1.0.1"
-aws-sdk-dynamodb = "1.2.0"
-aws-sdk-rekognition = "1.2.0"
-aws-sdk-s3 = "1.2.0"
-aws-sdk-sns = "1.2.0"
-aws-smithy-runtime = "1.0.1"
-aws-smithy-types-convert ={ features = ["convert-chrono"],  version = "0.60.0"}
+aws-config = { version = "1.0.1" }
+aws-sdk-dynamodb = { version = "1.3.0" }
+aws-sdk-rekognition = { version = "1.3.0" }
+aws-sdk-s3 = { version = "1.4.0" }
+aws-sdk-sns = { version = "1.3.0" }
+aws-smithy-runtime = { version = "1.0.1" }
+aws-smithy-types-convert = { version = "0.60.0", features = ["convert-chrono"] }
 aws_lambda_events = { version = "0.11.1", features = ["s3", "apigw"], default-features = false }
 bytes = "1.4.0"
 chrono = "0.4.24"
