--- a/rustv1/cross_service/photo_asset_management/integration/Cargo.toml
+++ b/rustv1/cross_service/photo_asset_management/integration/Cargo.toml
@@ -7,9 +7,9 @@ edition = "2021"
 
 
 [dependencies]
-aws-config = "1.0.1"
-aws-sdk-dynamodb = "1.2.0"
-aws-sdk-rekognition = "1.2.0"
+aws-config = { version = "1.0.1" }
+aws-sdk-dynamodb = { version = "1.3.0" }
+aws-sdk-rekognition = { version = "1.3.0" }
 photo_asset_management = { path = "../"}
 tokio = { version = "1.27.0", features = ["macros"] }
 tracing = "0.1.37"
