--- a/rustv1/cross_service/rest_ses/Cargo.toml
+++ b/rustv1/cross_service/rest_ses/Cargo.toml
@@ -14,12 +14,12 @@ name = "rest_ses"
 [dependencies]
 actix-web = "4"
 actix-web-prom = "0.6.0"
-aws-config = "1.0.1"
-aws-sdk-cloudwatchlogs = "1.2.0"
-aws-sdk-rdsdata = "1.2.0"
-aws-sdk-ses = "1.2.0"
-aws-smithy-types = "1.0.1"
-aws-smithy-runtime = "1.0.1"
+aws-config = { version = "1.0.1" }
+aws-sdk-cloudwatchlogs = { version = "1.3.0" }
+aws-sdk-rdsdata = { version = "1.3.0" }
+aws-sdk-ses = { version = "1.3.0" }
+aws-smithy-types = { version = "1.0.1" }
+aws-smithy-runtime = { version = "1.0.1" }
 chrono = { version = "0.4.22", default-features = false, features = [
     "clock",
     "serde",
@@ -46,7 +46,7 @@ uuid = { version = "1.2.1", features = ["v4", "serde"] }
 xlsxwriter = "0.6.0"
 
 [dev-dependencies]
-aws-smithy-runtime = "1.0.1"
+aws-smithy-runtime = { version = "1.0.1" }
 fake = { version = "2.5.0", features = ["uuid"] }
 once_cell = "1.15.0"
 rand = "0.8.5"
