--- a/rustv1/examples/aurora/Cargo.toml
+++ b/rustv1/examples/aurora/Cargo.toml
@@ -11,10 +11,10 @@ version = "0.1.0"
 [dependencies]
 anyhow = "1.0.75"
 assert_matches = "1.5.0"
-aws-config = { features = ["behavior-version-latest"], version = "1.0.1"}
-aws-smithy-types = "1.0.1"
-aws-smithy-runtime-api = "1.0.1"
-aws-sdk-rds = "1.2.0"
+aws-config = { version = "1.0.1", features = ["behavior-version-latest"] }
+aws-smithy-types = { version = "1.0.1" }
+aws-smithy-runtime-api = { version = "1.0.1" }
+aws-sdk-rds = { version = "1.3.0" }
 inquire = "0.6.2"
 mockall = "0.11.4"
 phf = { version = "0.11.2", features = ["std", "macros"] }
