--- a/rustv1/examples/auto-scaling/Cargo.toml
+++ b/rustv1/examples/auto-scaling/Cargo.toml
@@ -7,10 +7,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-aws-config = { features = ["behavior-version-latest"], version = "1.0.1"}
-aws-sdk-autoscaling = "1.2.0"
-aws-sdk-ec2 = "1.2.0"
-aws-types = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
+aws-config = { version = "1.0.1", features = ["behavior-version-latest"] }
+aws-sdk-autoscaling = { version = "1.3.0" }
+aws-sdk-ec2 = { version = "1.3.0" }
+aws-types = { version = "1.0.1" }
 tokio = { version = "1.20.1", features = ["full"] }
 clap = { version = "~4.4", features = ["derive"] }
 tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
