--- a/rustv1/examples/concurrency/Cargo.toml
+++ b/rustv1/examples/concurrency/Cargo.toml
@@ -21,7 +21,7 @@ tracing = "0.1.37"
 tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
 
 [dev-dependencies]
-aws-config = "1.0.1"
-aws-sdk-s3 = "1.2.0"
-aws-sdk-sqs = "1.2.0"
+aws-config = { version = "1.0.1" }
+aws-sdk-s3 = { version = "1.4.0" }
+aws-sdk-sqs = { version = "1.3.0" }
 fastrand = "1.8.0"
