--- a/rustv1/examples/greengrassv2/Cargo.toml
+++ b/rustv1/examples/greengrassv2/Cargo.toml
@@ -5,9 +5,9 @@ authors = ["Aaron Tsui <aaron.tsui@outlook.com>"]
 edition = "2021"
 
 [dependencies]
-aws-config = { features = ["behavior-version-latest"], version = "1.0.1"}
-aws-sdk-greengrassv2 = "1.2.0"
-aws-types = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
+aws-config = { version = "1.0.1", features = ["behavior-version-latest"] }
+aws-sdk-greengrassv2 = { version = "1.3.0" }
+aws-types = { version = "1.0.1" }
 tokio = { version = "1", features = ["full"] }
 clap = { version = "~4.4", features = ["derive"] }
 tracing-subscriber = { version = "0.3.5", features = ["env-filter"] }
