--- a/rustv1/examples/iam/Cargo.toml
+++ b/rustv1/examples/iam/Cargo.toml
@@ -17,11 +17,11 @@ name = "iam_getting_started"
 path = "src/bin/iam-getting-started.rs"
 
 [dependencies]
-aws-config = { features = ["behavior-version-latest"], version = "1.0.1"}
-aws-credential-types = { features = ["hardcoded-credentials"],  version = "1.0.1"}
-aws-sdk-iam = "1.2.0"
-aws-sdk-s3 = "1.2.0"
-aws-sdk-sts = "1.2.0"
+aws-config = { version = "1.0.1", features = ["behavior-version-latest"] }
+aws-credential-types = { version = "1.0.1", features = ["hardcoded-credentials"] }
+aws-sdk-iam = { version = "1.3.0" }
+aws-sdk-s3 = { version = "1.4.0" }
+aws-sdk-sts = { version = "1.3.1" }
 sdk-examples-test-utils = { path = "../../test-utils" }
 tokio = { version = "1.20.1", features = ["full"] }
 clap = { version = "~4.4", features = ["derive"] }
