--- a/rustv1/examples/kms/Cargo.toml
+++ b/rustv1/examples/kms/Cargo.toml
@@ -9,8 +9,8 @@ edition = "2021"
 description = "Example usage of the KMS service"
 
 [dependencies]
-aws-config = { features = ["behavior-version-latest"], version = "1.0.1"}
-aws-sdk-kms = "1.2.0"
+aws-config = { version = "1.0.1", features = ["behavior-version-latest"] }
+aws-sdk-kms = { version = "1.3.0" }
 tokio = { version = "1.20.1", features = ["full"] }
 base64 = "0.13.0"
 clap = { version = "~4.4", features = ["derive"] }
