--- a/rustv1/examples/logging/logger/Cargo.toml
+++ b/rustv1/examples/logging/logger/Cargo.toml
@@ -11,8 +11,8 @@ version = "0.1.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-aws-config = { features = ["behavior-version-latest"], version = "1.0.1"}
-aws-sdk-dynamodb = "1.2.0"
+aws-config = { version = "1.0.1", features = ["behavior-version-latest"] }
+aws-sdk-dynamodb = { version = "1.3.0" }
 # snippet-start:[logging.rust.logger-cargo.toml-env_logger]
 env_logger = "0.9.0"
 # snippet-end:[logging.rust.logger-cargo.toml-env_logger]
