--- a/rustv1/examples/testing/Cargo.toml
+++ b/rustv1/examples/testing/Cargo.toml
@@ -10,13 +10,13 @@ edition = "2021"
 # snippet-start:[testing.rust.Cargo.toml]
 [dependencies]
 async-trait = "0.1.51"
-aws-config = { features = ["behavior-version-latest"], version = "1.0.1"}
-aws-credential-types = { features = [ "hardcoded-credentials", ],  version = "1.0.1"}
-aws-sdk-s3 = "1.2.0"
-aws-smithy-types = "1.0.1"
-aws-smithy-runtime = { features = ["test-util"],  version = "1.0.1"}
-aws-smithy-runtime-api = { features = ["test-util"],  version = "1.0.1"}
-aws-types = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
+aws-config = { version = "1.0.1", features = ["behavior-version-latest"] }
+aws-credential-types = { version = "1.0.1", features = [ "hardcoded-credentials", ] }
+aws-sdk-s3 = { version = "1.4.0" }
+aws-smithy-types = { version = "1.0.1" }
+aws-smithy-runtime = { version = "1.0.1", features = ["test-util"] }
+aws-smithy-runtime-api = { version = "1.0.1", features = ["test-util"] }
+aws-types = { version = "1.0.1" }
 clap = { version = "~4.4", features = ["derive"] }
 http = "0.2.9"
 mockall = "0.11.4"
