--- a/rustv1/examples/tls/Cargo.toml
+++ b/rustv1/examples/tls/Cargo.toml
@@ -12,9 +12,9 @@ name = "tls"
 path = "src/lib.rs"
 
 [dependencies]
-aws-config = { features = ["behavior-version-latest"], version = "1.0.1"}
-aws-smithy-runtime = "1.0.1"
-aws-sdk-kms = { version = "1.2.0", default-features = false }
+aws-config = { version = "1.0.1", features = ["behavior-version-latest"] }
+aws-smithy-runtime = { version = "1.0.1" }
+aws-sdk-kms = { version = "1.3.0", default-features = false }
 webpki-roots = "0.22.4"
 tokio = { version = "1.20.1", features = ["full"] }
 rustls = "0.20.6"
