--- a/rustv1/lambda/calculator/Cargo.toml
+++ b/rustv1/lambda/calculator/Cargo.toml
@@ -9,10 +9,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-aws-config = "1.0.1"
-aws-sdk-ec2 = "1.2.0"
-aws-sdk-lambda = "1.2.0"
-aws-sdk-s3 = "1.2.0"
+aws-config = { version = "1.0.1" }
+aws-sdk-ec2 = { version = "1.3.0" }
+aws-sdk-lambda = { version = "1.3.0" }
+aws-sdk-s3 = { version = "1.4.0" }
 lambda_runtime = "0.8.0"
 clap = { version = "~4.4", features = ["derive"] }
 tokio = { version = "1.20.1", features = ["full"] }
