--- a/rustv1/test-utils/Cargo.toml
+++ b/rustv1/test-utils/Cargo.toml
@@ -9,10 +9,10 @@ edition = "2021"
 [workspace]
 
 [dependencies]
-aws-config = "1.0.1"
-aws-smithy-types = "1.0.1"
-aws-smithy-runtime = { features = ["test-util"],  version = "1.0.1"}
-aws-types = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next"}
+aws-config = { version = "1.0.1" }
+aws-smithy-types = { version = "1.0.1" }
+aws-smithy-runtime = { version = "1.0.1", features = ["test-util"] }
+aws-types = { version = "1.0.1" }
 http = "0.2"
 tokio = "1.33.0"
 
