--- a/rustv1/webassembly/Cargo.toml
+++ b/rustv1/webassembly/Cargo.toml
@@ -11,11 +11,11 @@ crate-type = ["cdylib"]
 
 [dependencies]
 aws-config = { version = "1.0.1", default-features = false }
-aws-credential-types = { features = ["hardcoded-credentials"],  version = "1.0.1"}
-aws-sdk-lambda = { version = "1.2.0", default-features = false }
-aws-smithy-async = "1.0.1"
-aws-smithy-runtime-api = "1.0.1"
-aws-smithy-types = "1.0.1"
+aws-credential-types = { version = "1.0.1", features = ["hardcoded-credentials"] }
+aws-sdk-lambda = { version = "1.3.0", default-features = false }
+aws-smithy-async = { version = "1.0.1" }
+aws-smithy-runtime-api = { version = "1.0.1" }
+aws-smithy-types = { version = "1.0.1" }
 async-trait = "0.1.63"
 console_error_panic_hook = "0.1.7"
 http = "0.2.8"
