--- a/rustv1/examples/s3/Cargo.toml
+++ b/rustv1/examples/s3/Cargo.toml
@@ -44,3 +44,6 @@ tokio-stream = "0.1.8"
 tracing = "0.1.37"
 tracing-subscriber = { version = "0.3.5", features = ["env-filter"] }
 uuid = { version = "1.3.1", features = ["serde", "v4"] }
+
+serde_json = "1"
+serde = { version = "1", features = ["derive"]}
