--- a/.doc_gen/metadata/secrets-manager_metadata.yaml
+++ b/.doc_gen/metadata/secrets-manager_metadata.yaml
@@ -110,8 +110,7 @@ secrets-manager_GetSecretValue:
           excerpts:
             - description:
               snippet_tags:
-                - python.example_code.secrets-manager.SecretsManagerSecret
-                - python.example_code.secrets-manager.GetSecretValue
+                - python.example_code.secretsmanager.GetSecretValue
     Rust:
       versions:
         - sdk_version: 1
@@ -236,3 +235,20 @@ secrets-manager_ListSecrets:
                 - secretsmanager.rust.list-secrets
   services:
     secrets-manager: {ListSecrets}
+secrets-manager_BatchGetSecretValue:
+  title: Get a batch of &ASM; secret value using an &AWS; SDK
+  title_abbrev: Get a batch of secret values.
+  synopsis: get a batch of &ASM; secret values.
+  category:
+  languages:
+    Python:
+      versions:
+        - sdk_version: 3
+          github: python/example_code/secretsmanager
+          sdkguide:
+          excerpts:
+            - description:
+              snippet_tags:
+                - python.example_code.secretsmanager.BatchGetSecretValue
+  services:
+    secrets-manager: {BatchGetSecretValue}
