--- a/.doc_gen/metadata/secrets-manager_metadata.yaml
+++ b/.doc_gen/metadata/secrets-manager_metadata.yaml
@@ -237,7 +237,7 @@ secrets-manager_ListSecrets:
     secrets-manager: {ListSecrets}
 secrets-manager_BatchGetSecretValue:
   title: Get a batch of &ASM; secret value using an &AWS; SDK
-  title_abbrev: Get a batch of secret values.
+  title_abbrev: Get a batch of secret values
   synopsis: get a batch of &ASM; secret values.
   category:
   languages:
