--- a/.doc_gen/metadata/cloudwatch-logs_metadata.yaml
+++ b/.doc_gen/metadata/cloudwatch-logs_metadata.yaml
@@ -334,7 +334,7 @@ cloudwatch-logs_StartQuery:
   services:
     cloudwatch-logs: {StartQuery}
 cloudwatch-logs_Scenario_BigQuery:
-  title: Use &CWL; to run a large query.
+  title: Use &CWL; to run a large query
   title_abbrev: Run a large query
   synopsis: use &CWL; to query more than 10,000 records.
   category: Scenarios
