--- a/dotnetv3/cross-service/PhotoAssetManager/PamApiAnnotations/serverless.template
+++ b/dotnetv3/cross-service/PhotoAssetManager/PamApiAnnotations/serverless.template
@@ -47,7 +47,7 @@
         "MemorySize": 256,
         "Timeout": 30,
         "Policies": [
-          "AWSLambda_FullAccess"
+          "AWSLambdaBasicExecutionRole"
         ],
         "PackageType": "Zip",
         "Handler": "PamApiAnnotations::PamApiAnnotations.Functions_GetLabels_Generated::GetLabels",
@@ -56,8 +56,7 @@
             "Type": "HttpApi",
             "Properties": {
               "Path": "/labels",
-              "Method": "GET",
-              "PayloadFormatVersion": "2.0"
+              "Method": "GET"
             }
           }
         }
@@ -77,7 +76,7 @@
         "MemorySize": 256,
         "Timeout": 30,
         "Policies": [
-          "AWSLambda_FullAccess"
+          "AWSLambdaBasicExecutionRole"
         ],
         "PackageType": "Zip",
         "Handler": "PamApiAnnotations::PamApiAnnotations.Functions_Upload_Generated::Upload",
@@ -86,8 +85,7 @@
             "Type": "HttpApi",
             "Properties": {
               "Path": "/upload",
-              "Method": "PUT",
-              "PayloadFormatVersion": "2.0"
+              "Method": "PUT"
             }
           }
         }
