--- a/.doc_gen/metadata/secrets-manager_metadata.yaml
+++ b/.doc_gen/metadata/secrets-manager_metadata.yaml
@@ -110,7 +110,7 @@ secrets-manager_GetSecretValue:
           excerpts:
             - description:
               snippet_tags:
-                - python.example_code.secretsmanager.GetSecretValue
+                - python.example_code.python.GetSecretValue.full
     Rust:
       versions:
         - sdk_version: 1
@@ -250,6 +250,6 @@ secrets-manager_BatchGetSecretValue:
           excerpts:
             - description:
               snippet_tags:
-                - python.example_code.secretsmanager.BatchGetSecretValue
+                - python.example_code.python.BatchGetSecretValue.full
   services:
     secrets-manager: {BatchGetSecretValue}
